added plan model and dashboard page

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -1,3 +1,7 @@
 extends layout/layout
 
 block content
+    p
+    a(href="/plans/new") create a plan!
+    p
+    a(href="/dashboard") go to your plan
