--- a/src/views/dashboard.jade
+++ b/src/views/dashboard.jade
@@ -2,7 +2,7 @@ extends layout/layout
 block content
     h2 Here are the details of your plan:
     ul
-    each plan in plans
-        li starting point: #{plan.startingPoint}
-        li goal: #{plan.endGoal}
-        li type: #{plan.type}
+        li starting point: #{startingPoint}
+        li goal: #{endGoal}
+        li type: #{type}
+        li plan:
